[package]
name = "heist"
version = "1.0.0"
edition = "2021"
description = "Cross-platform terminal shell history analyzer with TUI and CLI modes."
authors = ["Zer0C0d3r <odin.coder77@proton.me>"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.33"
serde_toml = { package = "toml", version = "0.9.2" }
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
anyhow = "1.0"
rayon = { version = "1.11", optional = true }
log = "0.4"
thiserror = "2.0.15"
atty = "0.2.13"

[features]
default = []
bash = []
zsh = []
fish = []
rayon = ["dep:rayon"]

[dev-dependencies]
assert_cmd = "2.0"

[profile.release]
lto = true
codegen-units = 1
